tests/machine/x/pascal/for_map_collection.error
line: 27
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/for_map_collection.pas
for_map_collection.pas(23,13) Error: Incompatible types: got "ShortString" expected "TFPGMap<System.ShortString,System.LongInt>"
for_map_collection.pas(24,16) Error: Can't read or write variables of this type
for_map_collection.pas(27) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

